# TheHumans

./: .gitignore  README.md
Lyudishki/: CMakeLists.txt  README.md
Lyudishki/forms/: event_edit.ui  group_empty.ui  main_window.ui  person_detail.ui  person_edit.ui  person_list.ui  person_row.ui  settings.ui
Lyudishki/resources/: resources.qrc
Lyudishki/resources/icons/: Lyudishki.icns  Lyudishki.rc
Lyudishki/resources/styles/: mrrobot.qss
Lyudishki/scripts/: build_dmg.sh  build_windows.bat  generate_dmg_bg.py  generate_icon.py  lyudishki_installer.iss
Lyudishki/src/: main.cpp
Lyudishki/src/app/: AppContext.cpp  AppContext.h
Lyudishki/src/data/db/: DatabaseManager.cpp  DatabaseManager.h  MigrationManager.cpp  MigrationManager.h
Lyudishki/src/data/repositories/: IGroupRepository.h  IPersonRepository.h  SqliteGroupRepository.cpp  SqliteGroupRepository.h  SqlitePersonRepository.cpp  SqlitePersonRepository.h
Lyudishki/src/domain/: Email.h  Group.h  Person.h  PersonDocument.h  PersonEvent.h  PersonFile.h  PersonNote.h  PersonPhoto.h  PersonProfile.h  PersonRelation.h  PhoneNumber.h  RelationshipStatusChange.h  SocialAccount.h  Tag.h
Lyudishki/src/services/: CalendarExportService.cpp  CalendarExportService.h  DataService.cpp  DataService.h  GroupService.cpp  GroupService.h  PeopleService.cpp  PeopleService.h  ReminderService.cpp  ReminderService.h  SearchService.cpp  SearchService.h
Lyudishki/src/ui/delegates/: PersonRowDelegate.cpp  PersonRowDelegate.h
Lyudishki/src/ui/dialogs/: PersonGraphDialog.cpp  PersonGraphDialog.h  PersonStatsDialog.cpp  PersonStatsDialog.h
Lyudishki/src/ui/models/: PersonListModel.cpp  PersonListModel.h  PersonSortFilterProxy.cpp  PersonSortFilterProxy.h
Lyudishki/src/ui/views/: EmptyStateView.cpp  EmptyStateView.h  PersonDetailView.cpp  PersonDetailView.h  PersonEditView.cpp  PersonEditView.h  PersonListView.cpp  PersonListView.h
Lyudishki/src/ui/widgets/: PersonGraphNode.cpp  PersonGraphNode.h  PersonGraphView.cpp  PersonGraphView.h  SocialIcon.cpp  SocialIcon.h
Lyudishki/src/ui/windows/: MainWindow.cpp  MainWindow.h
Lyudishki/tests/: TestGroupRepository.cpp  TestPersonRepository.cpp  TestPersonSortFilterProxy.cpp  TestServices.cpp  main_test.cpp
